--- a/portfolio-RachitManandhar/css/style.css
+++ b/portfolio-RachitManandhar/css/style.css
@@ -80,6 +80,7 @@ p{
     height: 48px;
     width: 160px;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 .Button{
@@ -134,6 +135,11 @@ h1{
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 30px;
+    transition: 0.3s ease;
+}
+
+.PBox:hover {
+    border-color: white;
 }
 
 .PIcon{
@@ -151,6 +157,11 @@ h1{
 .PTitle{
     font-size: 2rem;
     color: white;
+    transition: 0.3s ease;
+}
+
+.PBox:hover .PTitle {
+    color: #6959c9;
 }
 
 .Contact{
@@ -226,6 +237,7 @@ h1{
     font-size: 20px;
     color: white;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .Footer{
