Fixed an error in CSS and JS in Week2 Workshop

--- a/week2/portfolio-RachitManandhar/css/style.css
+++ b/week2/portfolio-RachitManandhar/css/style.css
@@ -22,6 +22,11 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.no-scroll {
+    overflow: hidden;
+    height: 100vh;
+}
+
 #progressBar {
   position: fixed;
   top: 0;
@@ -88,6 +93,10 @@ body{
     align-items: center;
     justify-content: space-between;
     width: 100%;
+}
+
+.open {
+    display: block;
 }
 
 #navMobButton {
